# orion

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  install.sh  make.toml
orion_cli/: Cargo.toml
orion_cli/src/: main.rs
orion_cli/src/cli/: coloredcli.rs  filemanager.rs  gitcli.rs  sysflow.rs
orion_lib/: Cargo.toml
orion_lib/src/: lib.rs
orion_lib/src/arch/: simplecmd.rs  update.rs
orion_lib/src/github/: clone.rs  gittool.rs  push.rs  release.rs
orion_lib/src/zipper/: zip.rs
src/: main.rs
src/cli/: coloredcli.rs  filemanager.rs  gitcli.rs  mod.rs  sysflow.rs
the_bin/: Cargo.toml
the_bin/src/: main.rs
the_lib/: Cargo.toml
the_lib/src/: lib.rs
the_lib/src/commands/: command.rs  mod.rs
the_lib/src/compressor/: mod.rs  rs_zip.rs
the_lib/src/executor/: exe_cmd.rs  mod.rs
the_lib/src/git/: git_functions.rs  mod.rs
the_lib/src/macros/: colprint.rs  mod.rs
the_lib/src/system/: mod.rs  system_commands.rs
