[package]
name = "whispercli"
description = "Whispercli is a CLI tool that intends to minimize the amount of written command line within the console"
version = "2.2.1"
edition = "2021"
authors = ["div-styl"]
readme = "README.md"
repository = "https://github.com/div-styl/whispercli/"
[badges]
maintenance = { status = "actively-developed" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive", "cargo"] }
inquire = "0.7.1"
commandcrafter = "0.3.2"
[profile.dev]
opt-level = 1
[profile.release]
opt-level = 3
