[workspace]

members = ["orion_cli", "orion_lib"]
resolver = "2"

[workspace.package]
description = "Orion is a CLI tool that intends to minimize the amount of written command line within the console"
version = "2.2.4"
edition = "2021"
authors = ["div-styl"]
readme = "README.md"
repository = "https://github.com/div-styl/orion/"


[profile.dev]
opt-level = 1
[profile.release]
opt-level = 3
