[workspace]

members = ["the_bin", "the_lib"]
resolver = "2"

[workspace.package]
description = "Orion is a CLI tool that intends to minimize the amount of written command line within the console"
version = "3.0.0"
edition = "2021"
authors = ["Abdogouhmad <gouhmada@gmail.com>"]
readme = "README.md"
repository = "https://github.com/div-styl/orion/"

[profile.dev]
opt-level = 1
[profile.release]
opt-level = 3
