[package]
name = "orion"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
[badges]
maintenance = { status = "actively-developed" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive", "cargo"] }
inquire = "0.7.1"
commandcrafter = "0.3.2"
orion_lib = { path = "../orion_lib" }
