[package]
name = "orion"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
[badges]
maintenance = { status = "actively-developed" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "orn"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.1", features = ["derive", "cargo"] }
commandcrafter = "0.4.1"
inquire = "0.7.1"
orion_lib = { path = "../orion_lib" }
