[package]
name = "the_lib"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
compress-tools = "0.15.1"
git2 = "0.19.0"
tokio = { version = "1.40.0", features = [ "rt", "full"] }
walkdir = "2.5.0"
zip = "0.6.6"
